implemented several TODO's: modified query builder in clickhouse added get methods to filter interface renamed isNull method to isEmpty